<resources>
    <string name="app_name">GAMEBOOK</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_favorite">Favoris</string>
    <string name="action_settings">Paramètres</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Pour la page login -->
    <string name="register_button">Register</string>
    <string name="MessageNoLogin">Il faut remplir les champs obligatoires : le login et le mot-de-passe !</string>
    <string name="MessageLoginIncorrect">Le login ou le mot-de-passe est incorrecte !</string>

    <!-- Pour l'enregistrement REGISTER -->
    <string name="id_new_user">Enregistrement</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="Confirmpassword">Confirmer mot de passe</string>
    <string name="retour">Retour</string>
    <string name="MessageRegisterIncorrecte">Il faut remplir au minimum les champs obligatoires !</string>
    <string name="MessageRegisterPassword">Le mot-de-passe n est pas égal à la confirmation de mot-de-passe !</string>


    <!-- List of match -->
    <string name="AddNewGame">Ajouter</string>
    <string name="tv_titel">All Games</string>


    <!--String related to Home-->
    <string name="idfootball">Matchs</string>
    <string name="idBooking">Réservations</string>
    <string name="idUser">Mon Compte</string>

    <!--String related to User-->
    <string name="idClient">Id Client</string>
    <string name="name">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="email">Email</string>
    <string name="password">Mot-de-passe</string>
    <string name="logout">Déconnexion</string>
    <string name="edit">Enregistrer</string>
    <string name="delete">Supprimer</string>

    <!--Les Matchs-->
    <string name="TheMatch">Le Match</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="stade">Stade</string>
    <string name="resident">Résident</string>
    <string name="visiteur">Visiteur</string>
    <string name="statut">Statut</string>
    <string name="quantite">Quantité</string>
    <string name="editMatch">Modifier le Match</string>
    <string name="addNewMatch">Ajouter un nouveau match</string>
    <string name="newMatch">Nouveau match</string>
    <string name="pick_date">Choisir la date</string>
    <string name="MessageNewMatch">Veuillez remplir tous les champs obligatoires</string>

    <!--Booking-->
    <string name="idListBooking">Reservations</string>
    <string name="editBooking">Modification de la réservation</string>
    <string name="game">Le match</string>
    <string name="ClientName">Client</string>
    <string name="seat">Siège</string>
    <string name="TheBooking">La réservation</string>
    <string name="addNewBooking">Ajouter une réservation</string>
    <string name="newBooking">Nouvelle réservation</string>

    <!--Alerts-->
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="deleteMatchTitle">Supression d un match</string>
    <string name="deleteMatchMessage">Etes-vous sûre de vouloir supprimer le match ?</string>
    <string name="deleteBookingTitle">Suppression de la réservation</string>
    <string name="deleteBookingMessage">Etes-vous sûre de vouloir supprimer la réservation ?</string>
    <string name="deleteUserTitle">Suppression de votre compte utilisateur</string>
    <string name="deleteUserMessage">Etes-vous sûre de vouloir supprimer votre compte ?</string>
    <string name="LogOutUserTitle">Déconnexion</string>
    <string name="LogOutUserMessage">Etes-vous sûre de vouloir vous déconnecter ?</string>
    <string name="RegisterUserTitle">Enregistrements de la modification</string>
    <string name="RegisterUserMessage">Etes vous sûre de vouloir enregistrer les modifications apportées ?</string>
    <string name="deleteGameTitle">Suppression d un match</string>
    <string name="deleteGameMessage">Etes-vous sûre de vouloir supprimer le match ?</string>

    <!--Bouttons-->
    <string name="cancel">Annuler</string>
    <string name="register">Enregistrer</string>

    <!--Autres-->
    <string name="search">Rechercher</string>
</resources>
