<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_the_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.TheMatch">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/TheMatch"
                android:id="@+id/idNameMatch"
                style="@style/title"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LabelDate"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idDate"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/heure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelHeure"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idHeure"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/stade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelStade"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idStade"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/resident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelResident"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idResident"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/visiteur"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/LabelVisiteur"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="match_parent"
                android:id="@+id/idVisiteur"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
        <TextView
            android:text="@string/quantite"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/LabelQuantite"
            android:layout_weight="1"
            style="@style/textView"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/idQuantite"
                android:layout_weight="1"
                style="@style/textView"/>
    </TableRow>

        <TableRow>
            <Button
                android:text="@string/addNewBooking"
                style="@style/button_add"
                android:id="@+id/buttonNewBooking"
                android:onClick="toNewBooking"/>
        </TableRow>
        <TableRow>
            <Button
                android:text="@string/delete"
                style="@style/button_delete"
                android:id="@+id/buttonDelete"
                android:onClick="toDelete"
                />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/editMatch"
                style="@style/button_save"
                android:id="@+id/buttonEdit"
                android:onClick="toEditMatch"/>
        </TableRow>

    </TableLayout>

    <Button
        android:text="Retour"
        style="@style/button_back"
        android:id="@+id/button"
        android:onClick="goToAllMatch"/>
</RelativeLayout>
