<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.Register">



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TableRow>
            <TextView
                android:text="@string/id_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_new_user"
                android:textSize="24sp" />
        </TableRow>
        <TableRow>

        </TableRow>
        <TableRow>

        </TableRow>


        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelName"
                android:layout_weight="1" />

            <EditText

                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditLastName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelFirstName"
                android:layout_weight="1" />

            <EditText

                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditFirstName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelEmail"
                android:layout_weight="1" />

            <EditText

                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditEmail"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/LabelPassword"
                android:layout_weight="1" />

            <EditText

                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="match_parent"
                android:id="@+id/EditPassword"
                android:inputType="textPassword"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/ConfirmPassword"
                android:layout_weight="1" />

            <EditText

                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="match_parent"
                android:id="@+id/EditPasswordConfirm"
                android:inputType="textPassword"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
           <Button
                android:text="@string/retour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonReturn"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="returnMainActivity"/>
            <Button
                android:text="@string/enregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEdit"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:onClick="onClickRegister"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>
