<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.NewBooking">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/newBooking"
                android:id="@+id/idNameMatch"
                style="@style/title"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/LabelGame"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:id="@+id/idEitTheGame"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ClientName"
                android:id="@+id/LabelClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="274dp"
                android:id="@+id/idClientName"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/LabelSeat"
                style="@style/textView"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/idEditSeat"
                android:inputType="number"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/cancel"
                android:id="@+id/buttonCancel"
                android:onClick="toTheMatch"
                style="@style/button_cancel"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/register"
                android:id="@+id/buttonEdit"
                android:onClick="toTheMatch"
                style="@style/button_save" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
