<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.user">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:text="@string/idUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idUser"
                android:textSize="24sp"
                tools:textAlignment="center"
                android:layout_marginBottom="55px"/>

            <Button android:id="@+id/idLogout"
                android:text="@string/logout"
                tools:textAlignment="center"
                android:onClick="returnMainActivity"
                />

        </TableRow>

        <!--<TableRow>    ID DU CLIENT
        <TextView
            android:text="@string/idClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LabelidClient"
            android:layout_weight="1" />

            <TextView
                android:text="BDD"
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idClient"
                android:layout_weight="1" />
        </TableRow>-->

        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelName"
                android:layout_weight="1" />

            <TextView
                android:text="BDD"
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelFirstName"
                android:layout_weight="1" />

            <TextView
                android:text="BDD"
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/firstName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LabelEmail"
            android:layout_weight="1" />

            <TextView
                android:text="BDD"
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/LabelPassword"
            android:layout_weight="1" />

        <TextView
            android:layout_width="274dp"
            android:ems="10"
            android:layout_height="match_parent"
            android:text="BDD"
            android:id="@+id/password"
            android:layout_weight="1" />
        </TableRow>

        <TableRow>
        <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEdit"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDelete"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark" />
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>
</RelativeLayout>
