<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.EditBooking">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:text="@string/editBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idNameMatch"
                android:textSize="24sp"
                tools:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LabelGame"
                android:layout_weight="1" />

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idGame"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ClientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelClientName"
                android:layout_weight="1" />

            <TextView
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idClientName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelSeat"
                android:layout_weight="1" />

            <EditText
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/idSeat"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancel"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:onClick="toTheMatch"
                />

            <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEdit"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:onClick="save"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>

