<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.edit_user">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TableRow
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/idUser"
                style="@style/title"
                android:id="@+id/idUser" />
        </TableRow>


        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelName"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditName"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelFirstName"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditFirstName"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LabelEmail"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:id="@+id/EditEmail"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/LabelPassword"
                android:layout_weight="1"
                style="@style/textView"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="274dp"
                android:ems="10"
                android:layout_height="match_parent"
                android:id="@+id/EditPassword"
                android:layout_weight="1"
                style="@style/textView"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/edit"
                style="@style/button_save"
                android:id="@+id/buttonEdit"
                android:onClick="toSave"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/delete"
                style="@style/button_delete"
                android:id="@+id/buttonDelete"
                android:onClick="toDelete"/>
        </TableRow>

    </TableLayout>

    <Button
        android:text="Annuler"
        style="@style/button_back"
        android:id="@+id/back"
        android:onClick="goHome"/>

</RelativeLayout>
