<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_of_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helena.gamebook.ListOfBooking">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_weight="1.08">

        <TextView
            android:text="@string/idListBooking"
            style="@style/title"
            android:layout_margin="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Bookings_List"
            style="@style/textView"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp">
       <Button
            android:text="@string/AddNewGame"
            android:id="@+id/btn_AddNewUser"
            android:onClick="onClickGoToAddNewBooking"
            style="@style/button_add"
        />
    </LinearLayout>



    <Button
        android:text="@string/retour"
        android:id="@+id/btn_backToSelectActionFromUW"
        android:onClick="backToHome"
        style="@style/button_back"/>

</RelativeLayout>