<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:gravity="center"
    tools:context="com.example.helena.gamebook.home"
    android:weightSum="1">

    <ImageButton
        android:layout_width="match_parent"
        app:srcCompat="@mipmap/football"
        android:id="@+id/imageButtonFootball"
        android:scaleType="fitCenter"
        android:layout_weight="0.09"
        android:background="@android:color/background_light"
        android:contentDescription="@string/idfootball"
        android:layout_height="80dp"
        android:onClick="toMatch"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="141dp"
        app:srcCompat="@mipmap/booking"
        android:id="@+id/imageButtonBooking"
        android:scaleType="fitCenter"
        android:background="@android:color/background_light"
        android:contentDescription="@string/idBooking"
        android:layout_marginTop="40dp"
        android:onClick="toListBooking"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="141dp"
        app:srcCompat="@mipmap/user"
        android:id="@+id/imageButtonUser"
        android:scaleType="fitCenter"
        android:background="@android:color/background_light"
        android:contentDescription="@string/idUser"
        android:layout_marginTop="40dp"
        android:onClick="toMonCompte"/>

</LinearLayout>

